--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,13 +2,19 @@
 <%= link_to 'Criar cliente', new_client_path %>
 
 <br>
-<br>
 <h3>Todos os clientes</h1>
-<% @client.each do |c| %>
-  <ul>
-    <li><%= c.cnpj %></li>
-    <li><%= c.razao_social %></li>
-    <li><%= c.n_funcionarios %></li>
-    <li><%= c.n_processos %></li>
-  </ul>
+<p><%= flash[:notice] %></p>
+<% if @clients.empty? %>
+  <p>Você ainda não possui clientes cadastrados</p>
+<% else %>
+  <% @clients.each do |c| %>
+    <ul>
+      <li><%= link_to c.cnpj, client_path(c.id) %></li>
+      <li><%= c.razao_social %></li>
+      <li><%= c.n_funcionarios %></li>
+      <li><%= c.proccess.where({status: [1, 2]}).count %></li>
+      <li><%= link_to 'Editar', edit_client_path(c.id) %></h1>
+      <li><%= link_to 'Excluir', client_archived_path(c.id), method: 'post' %></h1>
+    </ul>
+  <% end %>
 <% end %>
