--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
 
   <body>
     <div class="container">
+      <h1>Yube Teste</h1>
+      <%= render "shared/notify" %>
       <%= yield %>
     </div>
   </body>
