--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -1,4 +1,3 @@
-
 <%= form_for(@client) do |f| %>
   <% if @client.errors.any? %>
 
@@ -7,16 +6,19 @@
       <p><%= msg %></P>
     <% end %>
   <% end %>
+<div class="form-group ">
   <%= f.label :cnpj, 'CNPJ' %>
-  <%= f.text_field :cnpj%>
-  <br>
+  <%= f.text_field :cnpj, class: "form-control"%>
+</div>
+<div class="form-group ">
   <%= f.label :razao_social, 'Razão Social' %>
-  <%= f.text_field :razao_social %>
-  <br>
+  <%= f.text_field :razao_social, class: "form-control"%> 
+</div>
+<div class="form-group ">
   <%= f.label :n_funcionarios, 'Número de Funcionarios' %>
-  <%= f.number_field :n_funcionarios %>
-  <br>
-  <%= f.submit 'Salvar' %>
+  <%= f.number_field :n_funcionarios, class: "form-control"%>
+</div>
+  <%= f.submit 'Salvar', class: "btn btn-outline-primary" %>
+  <%= link_to 'Voltar', root_path, class: "btn btn-outline-primary" %>
+</div>
 <% end %>
-<br>
-<%= link_to 'Voltar', root_path %>
